--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 </head>
 <body>
     <div class="container">
-        <h1> Test 4 Result </h1> 
-        <img src="Screenshot 2024-05-06 17.50.04.png" alt="Screenshot">
+        <h1> Test 5 Result </h1> 
+        <img src="image.png" alt="Screenshot">
     </div>
 </body>
 </html>
